--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-readme-stats",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "author": "Abh80",
   "dependencies": {
